change in .ipynb file

--- a/heart_disease_prediction_model.ipynb
+++ b/heart_disease_prediction_model.ipynb
@@ -209,28 +209,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "fd978f8f-1d2e-4897-a709-462d2e37a302",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(303, 14)"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(303, 14)\n"
+     ]
     }
    ],
    "source": [
-    "heart_data.shape "
+    "print(heart_data.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "331d59b6-58c7-47a5-b709-00b1a09541c5",
    "metadata": {},
    "outputs": [
@@ -268,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "7d421ebc-f59f-4a48-9cb5-768d397f25dd",
    "metadata": {},
    "outputs": [],
@@ -323,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "a3af1e1f-8865-4b44-ae1d-aa7a0a518004",
    "metadata": {},
    "outputs": [
@@ -535,7 +532,7 @@
        "target    303.0    0.544554   0.498835    0.0    0.0    1.0    1.0    1.0"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -546,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "id": "aff68fa5-4621-425f-8e15-4d59b51460e3",
    "metadata": {},
    "outputs": [
@@ -570,7 +567,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -581,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "id": "6f4eabd3-63bc-4191-83e7-58f66d02d679",
    "metadata": {},
    "outputs": [
@@ -594,7 +591,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -605,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "id": "0d386aa9-0ea6-4bd5-9d22-92b105d69e41",
    "metadata": {},
    "outputs": [],
@@ -615,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "id": "48e40b3e-7ca7-4e49-a7ef-f4a7f6a4b1d3",
    "metadata": {},
    "outputs": [],
@@ -626,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "id": "244b1fd6-6add-485d-8761-e65e2121f811",
    "metadata": {},
    "outputs": [],
@@ -637,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "id": "08930e8f-c256-4ce6-b088-52e8cfb032c6",
    "metadata": {},
    "outputs": [],
@@ -647,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 16,
    "id": "ca661d81-a74d-4b75-b4fc-6dc6f235dfa6",
    "metadata": {},
    "outputs": [],
@@ -657,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 17,
    "id": "8af7d884-cd79-4129-8f7f-cd22c898a55a",
    "metadata": {},
    "outputs": [
@@ -689,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 18,
    "id": "ba12d973-0c03-4405-900a-938e838c59e2",
    "metadata": {},
    "outputs": [],
@@ -699,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 19,
    "id": "1b2888d0-f730-44da-8deb-77f5905fc7b3",
    "metadata": {},
    "outputs": [
@@ -1143,7 +1140,7 @@
        "LogisticRegression()"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1154,7 +1151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 20,
    "id": "c7348209-e1ec-44fb-a660-dd338d37a684",
    "metadata": {},
    "outputs": [],
@@ -1164,7 +1161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 21,
    "id": "0c2c7a4e-9919-41e1-a459-bf91e27aa04e",
    "metadata": {},
    "outputs": [],
@@ -1174,7 +1171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 22,
    "id": "b53c29f6-ee51-483b-ac59-a79c69f3b1f4",
    "metadata": {},
    "outputs": [
@@ -1184,7 +1181,7 @@
        "0.8032786885245902"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1195,7 +1192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 23,
    "id": "81604f04-57d3-49ae-be33-01dedabc294a",
    "metadata": {},
    "outputs": [],
@@ -1206,7 +1203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 24,
    "id": "16794256-82b1-4bdc-b4af-cdd900978dda",
    "metadata": {},
    "outputs": [
@@ -1216,7 +1213,7 @@
        "0.8429752066115702"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1227,7 +1224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 25,
    "id": "b306befd-8420-4646-a6f5-d7d82d5bbdca",
    "metadata": {},
    "outputs": [
@@ -1266,11 +1263,19 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "74b5d470",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
