Readme file updated

--- a/heart_disease_prediction_model.ipynb
+++ b/heart_disease_prediction_model.ipynb
@@ -269,54 +269,7 @@
    "id": "7d421ebc-f59f-4a48-9cb5-768d397f25dd",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# age: The person's age in years.\n",
-    "\n",
-    "# sex: Whether the person is male (1) or female (0).\n",
-    "\n",
-    "# cp (chest pain type): The kind of chest pain the person feels.\n",
-    "#     0 = Typical chest pain caused by heart (angina).\n",
-    "#     1 = Unusual chest pain.\n",
-    "#     2 = Chest pain not related to the heart.\n",
-    "#     3 = No chest pain, but has other symptoms (asymptomatic).\n",
-    "\n",
-    "# trestbps (resting blood pressure): Blood pressure when the person is sitting still, measured in mm Hg.\n",
-    "\n",
-    "# chol (cholesterol): The level of cholesterol (fat in the blood), measured in mg/dL. High cholesterol can be bad for the heart.\n",
-    "\n",
-    "# fbs (fasting blood sugar): If the person's blood sugar is over 120 mg/dL after fasting (not eating) for some time.\n",
-    "#     1 = Yes (high sugar)\n",
-    "#     0 = No (normal sugar)\n",
-    "\n",
-    "# restecg (resting ECG results): Result of a heart test (ECG) taken when the person is resting.\n",
-    "#     0 = Normal\n",
-    "#     1 = Some small problems with heartbeat\n",
-    "#     2 = Serious heart-related changes\n",
-    "\n",
-    "# thalach (maximum heart rate): The highest heart rate the person reached during exercise.\n",
-    "\n",
-    "# exang (exercise-induced angina): Whether the person had chest pain during exercise.\n",
-    "#     1 = Yes (had chest pain)\n",
-    "#     0 = No (no chest pain)\n",
-    "\n",
-    "# oldpeak: A number that shows how much the heart's performance dropped during exercise compared to rest. Higher numbers can mean more risk.\n",
-    "\n",
-    "# slope: The shape of the curve made by the heart's performance during a test.\n",
-    "#     0 = Going up (good)\n",
-    "#     1 = Flat (not good)\n",
-    "#     2 = Going down (bad)\n",
-    "\n",
-    "# ca: Number of main heart blood vessels seen clearly in a special test. More blocked vessels can mean higher heart risk.\n",
-    "\n",
-    "# thal: A blood disorder related to oxygen flow in the blood.\n",
-    "#     1 = Normal\n",
-    "#     2 = Fixed defect (a permanent problem)\n",
-    "#     3 = Reversible defect (a temporary or fixable problem)\n",
-    "\n",
-    "# target: This tells if the person has heart disease or not.\n",
-    "#     1 = Person has heart disease\n",
-    "#     0 = Person does NOT have heart disease\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1275,7 +1228,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
